--- a/app/client/styles/app.less
+++ b/app/client/styles/app.less
@@ -22,11 +22,13 @@ html {
 
 html {
   font-size: 125%;
+  max-width: 768px;
 }
 
 body {
   font-size: 14px;
   background-color: #f2f3f5;
+  max-width: 768px;
 }
 
 a {
