--- a/app/client/containers/BDOrg/style.less
+++ b/app/client/containers/BDOrg/style.less
@@ -2,6 +2,7 @@
 
 .bdorg-container {
   color: black;
+  background-color: white;
 
   .bdorg-content {
     .bdorg-top {
@@ -10,6 +11,20 @@
       height: 136px;
       background-size: 100% 136px;
       overflow: hidden;
+    }
+
+    .projects-list-list {
+      width: 100%;
+      height: auto;
+
+      a {
+        display: block;
+        padding: 15px;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        border-bottom: 1px solid #f2f4f5;
+      }
     }
 
     .bdorg-bottom {
