--- a/app/client/components/projectItem/style.less
+++ b/app/client/components/projectItem/style.less
@@ -2,31 +2,54 @@
 
 .metal,
 .logo,
-.content {
+.content,
+.spec {
   display: inline-block;
+  height: 100%;
+}
+
+.gold-border {
+  border: 1.5px solid #e3b24b;
+}
+
+.silver-border {
+  border: 1.5px solid #b3b1aa;
+}
+
+.copper-border {
+  border: 1.5px solid #cb865d;
+}
+
+.normal-border {
+  border: 1px solid #e7e7e7;
 }
 
 .logo {
   height: 50px;
   width: 20%;
   text-align: center;
+  vertical-align: top;
 
   .cover {
     vertical-align: middle;
     border-radius: 5px;
     display: inline-block;
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     background: #fff no-repeat 50%;
     background-size: contain;
-    border: 1.5px solid #e3b24b;
   }
 }
 
 .metal {
-  width: 5%;
+  width: 10%;
   text-align: center;
-  vertical-align: middle;
+  vertical-align: top;
+
+  img {
+    padding-left: -10px;
+    margin-top: 15px;
+  }
 
   span {
     font-size: 20px;
@@ -36,10 +59,23 @@
     font-weight: bold;
     position: relative;
     width: 12px;
+    margin-top: 15px;
+    display: inline-block;
   }
 }
 
 .content {
-  width: 75%;
+  width: 55%;
   padding-left: 10px;
+
+  .title {
+    font-size: 16px;
+    color: #222c38;
+    line-height: 22px;
+    font-weight: bold;
+  }
+}
+
+.spec {
+  width: 10%;
 }
