--- a/app/client/containers/BDOrg/style.less
+++ b/app/client/containers/BDOrg/style.less
@@ -19,7 +19,8 @@
 
       a {
         display: block;
-        padding: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px;
         width: 100%;
         height: 100%;
         overflow: hidden;
