--- a/app/client/containers/BDOrg/style.less
+++ b/app/client/containers/BDOrg/style.less
@@ -7,7 +7,7 @@
   .bdorg-content {
     .bdorg-top {
       width: 100%;
-      background: @black url('./imgs/org-top.png') no-repeat center;
+      //background: @black url('./imgs/org-top.png') no-repeat center;
       height: 136px;
       background-size: 100% 136px;
       overflow: hidden;
