--- a/app/client/components/projectItem/style.less
+++ b/app/client/components/projectItem/style.less
@@ -1,11 +1,28 @@
 
 
+.left,
+.right {
+  height: 100%;
+  float: left;
+}
+
+.left {
+  width: 10%;
+}
+
+.right {
+  width: 90%;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f2f4f5;
+}
+
 .metal,
 .logo,
 .content,
 .spec {
-  display: inline-block;
+  float: left;
   height: 100%;
+  margin: 0;
 }
 
 .gold-border {
@@ -24,31 +41,12 @@
   border: 1px solid #e7e7e7;
 }
 
-.logo {
-  height: 50px;
-  width: 20%;
-  text-align: center;
-  vertical-align: top;
-
-  .cover {
-    vertical-align: middle;
-    border-radius: 5px;
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    background: #fff no-repeat 50%;
-    background-size: contain;
-  }
-}
-
 .metal {
-  width: 15%;
   text-align: center;
-  vertical-align: top;
+  width: 100%;
 
   img {
-    padding-left: -10px;
-    margin-top: 15px;
+    margin-top: 10px;
   }
 
   span {
@@ -64,8 +62,24 @@
   }
 }
 
+.logo {
+  width: 20%;
+  text-align: center;
+  vertical-align: top;
+
+  .cover {
+    vertical-align: middle;
+    border-radius: 5px;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background: #fff no-repeat 50%;
+    background-size: contain;
+  }
+}
+
 .content {
-  width: 45%;
+  width: 60%;
   padding-left: 10px;
 
   .title {
@@ -74,8 +88,32 @@
     line-height: 22px;
     font-weight: bold;
   }
+
+  .num {
+    font-size: 12px;
+    color: #969fa9;
+  }
 }
 
 .spec {
-  width: 15%;
+  width: 20%;
+  font-size: 12px;
+  text-align: right;
+  color: #969fa9;
+  padding-right: 15px;
+
+  .top3Color {
+    color: #cf9d3f !important;
+    font-weight: bold;
+  }
+
+  .num {
+    font-size: 23px;
+    letter-spacing: 0;
+    line-height: 14px;
+  }
+
+  .txt {
+    margin-top: 5px;
+  }
 }
